Fixing upload alignment
Fixing upload alignment

--- a/DemoDev/DevApp/static/css/style.css
+++ b/DemoDev/DevApp/static/css/style.css
@@ -1303,7 +1303,7 @@ text-vertical:center;
 float:left;
 padding:5px;
 height:54px;
-width:359px;
+width:363px;
 }
 .upload{
 margin:0px;
